v2.11.3 14th October 2023
  - Workarounds for Xcode v14.3.

v2.11.2 21st November 2021
  - Added support for 'UIntEnum' as a base type for an enum.

v2.11.1 21st November 2021
  - A broken release.

v2.11.0 24th October 2021
  - Updated the project file format to v16.
  - Added support for specifying that modules #define PY_SSIZE_T_CLEAN.

v2.10.0 23rd September 2021
  - The /NoPyQtQMetaObject/ annotation can now be specified for namespaces.

v2.9.2 10th April 2021
  - 'xcode-select' is run to determine the path to Xcode.

v2.9.1 31st December 2020
  - Bug fixes.

v2.9.0 22nd December 2020
  - SIP files can now be moved to a different module.

v2.8.1 13th November 2020
  - Bug fixes.

v2.8.0 28th October 2020
  - Updated the project file format to v15.
  - Multiple items can now be deleted at the same time.
  - The context menu of an item now has a visual indicator that there is
    attached handwritten code or tags.
  - Removed the marking of enums as C++11 enum classes using the properties
    dialog as this is now detected automatically.
  - Added support for the /BaseType/ enum annotation.
  - Removed the support for applying naming conventions.
  - With unversioned projects, items that are no longer present are marked as
    'Removed' without actually removing them.
  - Removed support for the version number of a module.

v2.7.0 17th September 2020
  - Added the '-m' command line option to msipgen.
  - Added the 'Import Project' tool.
  - Added the option to delete all old versions of API items.
  - Removed all WebXML support.
  - Removed the 'Module Auto-fill' tool.

v2.6 20th July 2019
  - Bug fixes.

v2.5 25th June 2018
  - Updated the project file format to v14.
  - Added the /ScopesStripped/ argument annotation.

v2.4 17th June 2018
  - Changes for dip v0.5.

v2.3 18th January 2018
  - Updated the project file format to v13.
  - Enums can now be marked as C++11 enum classes using the properties dialog.

v2.2 23rd November 2017
  - Bug fixes.
