@@ -1,5 +1,7 @@
 v2.11.3 14th October 2023
   - Workarounds for Xcode v14.3.
+  - A project with an older version number can be opened so long as all
+    intermediate updates are optional.
 
 v2.11.2 21st November 2021
   - Added support for 'UIntEnum' as a base type for an enum.
